--- a/web-resource/configure.tmpl
+++ b/web-resource/configure.tmpl
@@ -3,19 +3,20 @@
 <div class="panel panel-default">
 	<div class="panel-heading">Profile Information</div>
 	<div class="panel-body">
-		<form>
-			<hidden id="id" value="{{user.getId()}}">
-				<div class="form-group col-md-4">
-					<label for="username">Username</label>
-					<input type="text" class="form-control" id="username" value="{{user.username}}">
-				</div>
-				<div class="form-group col-md-8">
-					<label for="address">Address</label>
-					<input type="text" class="form-control" id="address" value="{{user.address}}">
-				</div>
-				<div class="col-md-12">
-					<button type="submit" class="btn btn-default">Save</button>
-				</div>
+		<form method="POST">
+			<input type="hidden" name="form" value="user">
+			<input type="hidden" name="id" value="{{user.getId()}}">
+			<div class="form-group col-md-4">
+				<label for="username">Username</label>
+				<input type="text" class="form-control" id="username" name="username" value="{{user.username}}">
+			</div>
+			<div class="form-group col-md-8">
+				<label for="address">Address</label>
+				<input type="text" class="form-control" id="address" name="address" value="{{user.address}}">
+			</div>
+			<div class="col-md-12">
+				<button type="submit" class="btn btn-default pull-right">Save</button>
+			</div>
 		</form>
 	</div>
 </div>
