--- a/web-resource/overview.tmpl
+++ b/web-resource/overview.tmpl
@@ -5,11 +5,11 @@
     <div id="min-power-chart" style="height:450px;"></div>
 </div>
 <div class="row placeholders">
-    <H1>Previous two days (kWh/h)</H1>
+    <H1>Last Week (kWh/h)</H1>
     <div id="hour-power-chart" style="height:450px;"></div>
 </div>
 <div class="row placeholders">
-    <H1>Long term (kWh/day)</H1>
+    <H1>All History (kWh/day)</H1>
     <div id="day-power-chart" style="height:450px;"></div>
 </div>
 
