Moved PowerChallenge into Hal
Former-commit-id: 34665800518933f0b92723378601a3bafc53fdb0

--- a/web-resource/index.tmpl
+++ b/web-resource/index.tmpl
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Power;Challenge</title>
+    <title>HAL</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -26,7 +26,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Power;Challenge</a>
+            <a class="navbar-brand" href="#">HAL</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-left">
