--- a/web-resource/sensor_config.tmpl
+++ b/web-resource/sensor_config.tmpl
@@ -109,7 +109,7 @@
 
 <div class="col-md-12">
     <div class="panel panel-default drop-shadow">
-        <div class="panel-heading">External Users</div>
+        <div class="panel-heading">Power;Challenge External Users</div>
         <div class="panel-body">
             <p>Add or remove users that you want to synchronized data with.</p>
 
@@ -161,7 +161,7 @@
 
 <div class="col-md-12">
     <div class="panel panel-default drop-shadow">
-        <div class="panel-heading">External Sensors</div>
+        <div class="panel-heading">Power;Challenge External Sensors</div>
         <div class="panel-body">
             <p>This is a read only list of synchronized sensors from external users.</p>
 
