Added event config page
Former-commit-id: 96256bf1c1c7c4ac2f7a851fc816910cf5b79bb1

--- a/web-resource/sensor_config.tmpl
+++ b/web-resource/sensor_config.tmpl
@@ -1,4 +1,4 @@
-<h1 class="page-header">Configuration</h1>
+<h1 class="page-header">Sensor Configuration</h1>
 
 <div class="col-md-12">
     <div class="panel panel-default drop-shadow">
