--- a/web-resource/event_config.tmpl
+++ b/web-resource/event_config.tmpl
@@ -123,7 +123,7 @@
                 <button type="button" class="close" data-dismiss="modal">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="exampleModalLabel">External User</h4>
+                <h4 class="modal-title" id="exampleModalLabel">Event</h4>
             </div>
             <form method="POST">
                 <div class="modal-body">
@@ -140,10 +140,6 @@
                             <option>{{.getName()}}</option>
                             {{/availableEvents}}
                         </select>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label">Public:</label>
-                        <input type="checkbox" class="form-control" name="sync" value="true">
                     </div>
 
                     <hr>
