--- a/web-resource/index.tmpl
+++ b/web-resource/index.tmpl
@@ -26,21 +26,28 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">HAL</a>
+            <a class="navbar-brand" href="/">HAL</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
+            {{#rootNav}}
             <ul class="nav navbar-nav navbar-left">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sensors</a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{.getName()}}</a>
                     <ul class="dropdown-menu">
-                        {{#navigation}}<li><a href="{{.getURL()}}">{{.getName()}}</a></li>
-                        {{/navigation}}
+                        {{#.getSubNavs()}}<li><a href="{{.getURL()}}">{{.getName()}}</a></li>
+                        {{/.getSubNavs()}}
                     </ul>
                 </li>
             </ul>
+            {{/rootNav}}
+
             <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a href="#">{{user.username}} <span class="glyphicon glyphicon-user"></span></a>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{user.username}} <span class="glyphicon glyphicon-user"></span></a>
+                    <ul class="dropdown-menu">
+                        {{#userNav}}<li><a href="{{.getURL()}}">{{.getName()}}</a></li>
+                        {{/userNav}}
+                    </ul>
                 </li>
             </ul>
         </div>
@@ -52,8 +59,8 @@
         <div class="col-sm-3 col-md-2 sidebar">
             <ul id="sub-navbar" class="nav nav-sidebar">
                 <!-- <li class="active"><a href="/">Overview</a></li> -->
-                {{#navigation}}<li><a href="{{.getURL()}}">{{.getName()}}</a></li>
-                {{/navigation}}
+                {{#nav}}<li><a href="{{.getURL()}}">{{.getName()}}</a></li>
+                {{/nav}}
             </ul>
         </div>
 
