--- a/web-resource/sensor_config.tmpl
+++ b/web-resource/sensor_config.tmpl
@@ -239,7 +239,7 @@
                 <button type="button" class="close" data-dismiss="modal">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="exampleModalLabel">External User</h4>
+                <h4 class="modal-title" id="exampleModalLabel">Sensor</h4>
             </div>
             <form method="POST">
                 <div class="modal-body">
