--- a/web-resource/sensor_config.tmpl
+++ b/web-resource/sensor_config.tmpl
@@ -257,10 +257,13 @@
                             {{/availableSensors}}
                         </select>
                     </div>
-                    <div class="form-group">
-                        <label class="control-label">Public:</label>
-                        <input type="checkbox" class="form-control" name="sync" value="true">
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" name="sync" value="true">
+                            Public
+                        </label>
                     </div>
+
 
                     <hr>
                     <div id="sensor-data-conf">
