--- a/web-resource/pc_overview.tmpl
+++ b/web-resource/pc_overview.tmpl
@@ -23,7 +23,7 @@
 				[
 				{ y: (Date.now()-24*60*60*1000) },
 				{{#minData}}  
-					{ y: {{.timestamp}}, {{.username}}: {{.data}} },
+					{ y: {{.timestamp}}, "{{.username}}": {{.data}} },
 				{{/minData}}
 				{ y: Date.now() }
 				]
@@ -32,20 +32,20 @@
 				[
 				{ y: (Date.now()-7*24*60*60*1000) },
 				{{#hourData}}  
-					{ y: {{.timestamp}}, {{.username}}: {{.data}} },  
+					{ y: {{.timestamp}}, "{{.username}}": {{.data}} },
 				{{/hourData}}
 				{ y: Date.now() }
 				]
 		);
 		chartData("day-power-chart", 
 				[{{#dayData}}  
-					{ y: {{.timestamp}}, {{.username}}: {{.data}} },
+					{ y: {{.timestamp}}, "{{.username}}": {{.data}} },
 				{{/dayData}}
 				{ y: Date.now() }
 				]
 		);
 	});
-    var userArray = [ {{#username}} '{{.}}', {{/username}} ];
+    var userArray = [ {{#username}} "{{.}}", {{/username}} ];
     function chartData(elementId, data){
         Morris.Line({
               element: elementId,
