--- a/web-resource/user_config.tmpl
+++ b/web-resource/user_config.tmpl
@@ -9,13 +9,13 @@
                 <div class="form-group">
                     <label for="username" class="col-sm-2 control-label">Username:</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="username" name="username" value="{{user.username}}">
+                        <input type="text" class="form-control" id="username" name="username" value="{{user.getUsername()}}">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="address" class="col-sm-2 control-label">Address:</label>
                     <div class="col-sm-10">
-                        <textarea class="form-control" id="address" name="address">{{user.address}}</textarea>
+                        <textarea class="form-control" id="address" name="address">{{user.getAddress()}}</textarea>
                     </div>
                 </div>
                 <div class="form-group">
