--- a/web-resource/index.tmpl
+++ b/web-resource/index.tmpl
@@ -48,7 +48,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <span class="glyphicon glyphicon-user"></span>
-                        <strong>{{user.username}}</strong>
+                        <strong>{{user.getUsername()}}</strong>
                     </a>
                     <ul class="dropdown-menu">
                         <li>
