--- a/web-resource/index.tmpl
+++ b/web-resource/index.tmpl
@@ -28,7 +28,7 @@
             </button>
             <a class="navbar-brand" href="/">
                 <span class="glyphicon glyphicon-record" style="color:red"></span>
-                HAL
+                <b>HAL</b>
             </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
