Device data object are configurable from web but is not visualized correctly
Former-commit-id: a960f1bb610cb1dbbbc76826d15bdb4c6e90c984

--- a/web-resource/sensor_config.tmpl
+++ b/web-resource/sensor_config.tmpl
@@ -24,7 +24,7 @@
                     <td>{{.getName()}}</td>
                     <td>{{.getType()}}</td>
                     <td>{{.isSynced()}}</td>
-                    <td>{{.getConfig()}}</td>
+                    <td>{{.getDeviceConfig()}}</td>
                     <td>
                         <form method="POST">
                             <input type="hidden" name="action" value="remove_local_sensor">
@@ -148,24 +148,24 @@
                 <tr>
                     <td>{{.getName()}}</td>
                     <td>{{.getType()}}</td>
-                    <td>{{.getConfig()}}</td>
+                    <td>{{.getDeviceConfig()}}</td>
                     <td>
                         <form method="POST">
                             <div class="btn-toolbar pull-right">
                                 <input type="hidden" name="action" value="modify_external_sensor">
                                 <input type="hidden" name="id" value="{{.getId()}}">
-                                {{^.sync}}
+                                {{^.isSynced()}}
                                 <input type="hidden" name="sync" value="true">
                                 <button type="submit" class="btn btn-default btn-xs" title="Start Syncing">
                                     <span class="glyphicon glyphicon-save"></span>
                                 </button>
-                                {{/.sync}}
-                                {{#.sync}}
+                                {{/.isSynced()}}
+                                {{#.isSynced()}}
                                 <input type="hidden" name="sync" value="false">
                                 <button type="submit" class="btn btn-danger btn-xs" title="Stop Syncing and Clear Data">
                                     <span class="glyphicon glyphicon-remove"></span>
                                 </button>
-                                {{/.sync}}
+                                {{/.isSynced()}}
                             </div>
                         </form>
                     </td>
